重构单列工具类